# VeritaSTG

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  deps.cmake  get_deps.bat  get_deps.sh  src.cmake
frameworks/audio/: audio.c
frameworks/glad/include/glad/: gl.h
frameworks/glad/src/: gl.c
src/: Game.cpp  GlobalEventContext.cpp  Log.cpp  ResourcePool.cpp
src/include/VeritaSTG/: CallbackRegistry.hpp  Game.hpp  GlobalEventContext.hpp  GlobalRenderContext.hpp  Log.hpp  Resource.hpp  ResourceEngineWrapper.hpp  ResourcePool.hpp  engine_panic.hpp
src/runtime/linux/: main.cpp
src/runtime/win32/: VeritaSTG.rc  main.cpp  resource.h
